--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="instageam-wrapper">
+  <div class="instagram-wrapper">
     <div class="instagram-phone">
       <img src="./img/instagram-celular.png" alt="cellphone">
     </div>
@@ -25,7 +25,7 @@
       </div>
       <div class="group">
         <p class="not-account">Not Anakin?</p>
-        <p class="notaccount">
+        <p class="not-account">
           <span class="link-blue">Switch Accounts</span>
           or
           <span class="link-blue">Sign Up</span>
